fix collapse

--- a/kasa/src/components/Collapse/Collapse.module.css
+++ b/kasa/src/components/Collapse/Collapse.module.css
@@ -20,7 +20,7 @@
 .title {
   font-style: normal;
   font-weight: 500;
-  font-size: 13px;
+  font-size: 16px;
   line-height: 142.6%;
   color: #ffffff;
 
@@ -44,12 +44,15 @@
 .collapseText {
   position: absolute;
   width: 100%;
-  height: 210px;
+  height: fit-content;
   top: 25px;
   left: 0;
   background: #f7f7f7;
   border-radius: 5px;
   clip-path: inset(5px 0 0 0);
+  padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .rotate {
@@ -59,20 +62,9 @@
 .text {
   font-style: normal;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 16px;
   line-height: 142.6%;
   color: #ff6060;
-
-  position: absolute;
-  left: 5%;
-  top: 5%;
-  right: 2%;
-}
-@media (min-width: 768px) {
-  .text {
-    font-size: 016px;
-    left: 2%;
-  }
 }
 @media (min-width: 1024px) {
   .text {
